--- a/src/assets/favicons/favicons.html
+++ b/src/assets/favicons/favicons.html
@@ -2,7 +2,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/$faviconPublicPath/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/$faviconPublicPath/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="48x48" href="/$faviconPublicPath/favicon-48x48.png">
-<link rel="manifest" href="/$faviconPublicPath/manifest.webmanifest">
+<link rel="manifest" href="/$faviconPublicPath/manifest.json">
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="theme-color" content="#fff">
 <meta name="application-name" content="Default app">
